--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/CLDavis15/Liri-node-app/issues"
   },
-  "homepage": "https://github.com/CLDavis15/Liri-node-app#readme"
+  "homepage": "https://github.com/CLDavis15/Liri-node-app#readme",
+  "dependencies": {
+    "bandsintown": "^1.0.1"
+  }
 }
