--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/CLDavis15/Liri-node-app#readme",
   "dependencies": {
-    "bandsintown": "^1.0.1"
+    "axios": "^0.18.0",
+    "bandsintown": "^1.0.1",
+    "dotenv": "^7.0.0",
+    "node-spotify-api": "^1.0.7"
   }
 }
